# neko

./: .gitignore  LICENSE  Makefile  README.md  go.mod
.github/workflows/: ci.yml
cmd/neko/: main.go
docs/: API.md  ARCHITECTURE.md  BACKGROUND.md
engine/: .rust-analyzer.toml  Cargo.toml  build.rs
engine/src/: lib.rs
engine/src/engine/: engine.rs  mod.rs  resource.rs  validator.rs
engine/src/manifest/: manager.rs  mod.rs  resource.rs
engine/src/segment/: mod.rs  reader.rs  resource.rs  writer.rs
engine/src/shared/: hairball.rs  mod.rs  results.rs
engine/src/wal/: mod.rs  replayer.rs  resource.rs  writer.rs
internal/ffi/: bridge.go  bridge.h  bridge_test.go
pkg/cli/: cli.go  cli_test.go
simd/: Makefile  distance.c  distance.h  test_distance.c
