[package]
name = "neko-engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
cc = { version = "1", features = ["parallel"] }

[profile.release]
lto = true 
opt-level = "z"
codegen-units = 1
panic = "abort"
